--- a/index.html
+++ b/index.html
@@ -3,10 +3,24 @@
     <head>
         <meta charset="UTF-8">
         <title>Rock Paper Scissors</title>
-        <script src="script.js"></script>
+        <script src="script.js" defer></script>
 
     </head>
     <body>
+        <div id = "container">
+            <button id = "rock"> Rock </button>
+            <button id = "paper"> Paper </button>
+            <button id = "scissors"> Scissors </button>
+        </div>
+        <div id = "resultContainer">
+            <div class = "result">
+            </div>
+            <div class = "points">
+            </div>
+            <div class = "endResult">
+            </div>
+
+        </div>
 
     </body>
 </html>
